@@ -1,0 +1,1 @@
+src/petname/petname.py usr/share/pyshared/petname/
