@@ -1,0 +1,44 @@
+#  petname: library for generating human-readable, random names
+#           for objects (e.g. hostnames, containers, blobs)
+#
+#  Copyright 2014 Dustin Kirkland <dustin.kirkland@gmail.com>
+#
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+
+class PetName:
+	import random
+
+	adverbs = [__adverbs.txt__]
+	adjectives = [__adjectives.txt__]
+	names = [__names.txt__]
+
+	def RandAdverb():
+		return random.choice(adverbs)
+
+	def RandAdjective():
+		return random.choice(adjectives)
+
+	def RandName():
+		return random.choice(names)
+
+	def PetName(words, separator):
+		if words == 1:
+			return RandName()
+		elif words == 2:
+			return RandAdjective() + separator + RandName()
+		petname = []
+		for i in range(0, words-2):
+			petname.append(RandAdverb())
+		petname.append(RandAdjective())
+		petname.append(RandName())
+		return separator.join(petname)
